(Fix): Overlay issue caused by an unnecessary use of a width and overflow hidden on the container of the logo SVG.

--- a/site/web/app/themes/ljsherlock/MVC/View/_app/_molecules/loading-screen/_loading-screen.scss
+++ b/site/web/app/themes/ljsherlock/MVC/View/_app/_molecules/loading-screen/_loading-screen.scss
@@ -28,9 +28,6 @@
         margin:auto;
         bottom: 0;
         top: 0;
-        width:15%;
-        height:15%;
-        overflow:hidden;
 
         %loading-screen__object
         {
